--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
     },
     "devDependencies": {
         "@mdi/font": "^5.8.55",
-        "axios": "^0.19",
+        "axios": "^0.21.1",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "deepmerge": "^4.2.2",
+        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.30.0",
-        "sass-loader": "^8.0.2",
-        "vue-template-compiler": "^2.6.12"
+        "popper.js": "^1.12",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "material-design-icons-iconfont": "^6.1.0",
+        "v-mask": "^2.2.4",
         "vue": "^2.6.12",
         "vuetify": "^2.3.21"
     }
